--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "octocake-api",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "",
   "author": "",
   "private": true,
@@ -18,7 +18,12 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "prisma:studio": "yarn prisma studio",
+    "prisma:migrate:dev": "yarn prisma migrate dev",
+    "prisma:migrate:reset": "yarn prisma migrate reset",
+    "prisma:db:push": "yarn prisma db push",
+    "prisma:db:seed": "yarn prisma db seed --preview-feature"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
