--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prisma:studio": "yarn prisma studio",
-    "prisma:migrate:dev": "yarn prisma migrate dev",
-    "prisma:migrate:reset": "yarn prisma migrate reset",
-    "prisma:db:push": "yarn prisma db push",
-    "prisma:db:seed": "yarn prisma db seed --preview-feature"
+    "prisma:studio": "npx prisma studio",
+    "prisma:migrate:dev": "npx prisma migrate dev",
+    "prisma:migrate:reset": "npx prisma migrate reset",
+    "prisma:db:push": "npx prisma db push",
+    "prisma:db:seed": "npx prisma db seed --preview-feature"
   },
   "dependencies": {
     "@nestjs/common": "^8.0.0",
